; ModuleID = '/home/carl/AnghaBench/timescaledb/src/telemetry/extr_telemetry_metadata.c_ts_telemetry_metadata_get_install_timestamp.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/telemetry/extr_telemetry_metadata.c_ts_telemetry_metadata_get_install_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@METADATA_TIMESTAMP_KEY_NAME = common dso_local global i32 0, align 4
@CSTRINGOID = common dso_local global i32 0, align 4
@TIMESTAMPTZOID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_telemetry_metadata_get_install_timestamp() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @METADATA_TIMESTAMP_KEY_NAME, align 4
  %4 = call i32 @CStringGetDatum(i32 %3)
  %5 = load i32, i32* @CSTRINGOID, align 4
  %6 = load i32, i32* @TIMESTAMPTZOID, align 4
  %7 = call i32 @ts_metadata_get_value(i32 %4, i32 %5, i32 %6, i32* %1)
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* %1, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %0
  %11 = load i32, i32* @METADATA_TIMESTAMP_KEY_NAME, align 4
  %12 = call i32 @CStringGetDatum(i32 %11)
  %13 = load i32, i32* @CSTRINGOID, align 4
  %14 = call i32 (...) @GetCurrentTimestamp()
  %15 = call i32 @TimestampTzGetDatum(i32 %14)
  %16 = load i32, i32* @TIMESTAMPTZOID, align 4
  %17 = call i32 @ts_metadata_insert(i32 %12, i32 %13, i32 %15, i32 %16, i32 1)
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %10, %0
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @ts_metadata_get_value(i32, i32, i32, i32*) #1

declare dso_local i32 @CStringGetDatum(i32) #1

declare dso_local i32 @ts_metadata_insert(i32, i32, i32, i32, i32) #1

declare dso_local i32 @TimestampTzGetDatum(i32) #1

declare dso_local i32 @GetCurrentTimestamp(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
